[tool.poetry]
name = "starlite"
version = "1.5.2"
description = "Light-weight and flexible ASGI API Framework"
authors = ["Na'aman Hirschfeld <nhirschfeld@gmail.com>"]
maintainers = [
    "Na'aman Hirschfeld <nhirschfeld@gmail.com>",
    "Peter Schutt <peter.github@proton.me>",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/starlite-api/starlite"
repository = "https://github.com/starlite-api/starlite"
documentation = "https://starlite-api.github.io/starlite"
keywords = [
    "api",
    "rest",
    "http",
    "asgi",
    "pydantic",
    "starlette",
    "fastapi",
    "framework",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
]
include = ["CHANGELOG.md"]
packages = [{ include = "starlite" }]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
openapi-schema-pydantic = "*"
orjson = "*"
pydantic = "*"
pydantic-factories = "*"
python-multipart = "*"
pyyaml = "*"
starlette = "*"
typing-extensions = "*"
requests = { version = "*", optional = true }

[tool.poetry.dev-dependencies]
hypothesis = { extras = ["cli"], version = "*" }
mkdocs-material = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
uvicorn = "*"
sqlalchemy = { extras = ["mypy"], version = "*" }
Jinja2 = "*"
Mako = "*"
freezegun = "*"
pytest-mock = "*"
tox = "*"
requests = "*"
pylint = "^2.14.4"
nanobind = "^0.0.5"

[tool.poetry.extras]
testing = ["requests"]

[tool.poetry.build]
script = "build.py"
# TODO build the better way (https://github.com/sdispater/pendulum/commit/a2267c02437d6c1ea613a55dbfb7085d376e997b#diff-b70bfb027a8ef3ec4ab07a53a3b8ba83e63334ba3ce5ca6d9d773900ed452e5e)
generate-setup-file = true

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "wheel",
    "cmake>=3.18",
    "nanobind>=0.0.3",
    "ninja",
]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint.MESSAGE_CONTROL]
disable = [
    "fixme",
    "invalid-name",
    "line-too-long",
    "missing-class-docstring",
    "missing-module-docstring",
    "super-init-not-called",
    "too-few-public-methods",
    "duplicate-code",
]
enable = "useless-suppression"

[tool.pylint.REPORTS]
reports = "no"

[tool.pylint.FORMAT]
max-line-length = "120"

[tool.pylint.DESIGN]
max-args = 15
max-attributes = 20
max-locals = 30
max-returns = 15
max-branches = 15

[tool.pylint.VARIABLES]
ignored-argument-names = "args|kwargs|_|__"

[tool.pylint.BASIC]
good-names = "_,i,e,fn"

[tool.coverage.run]
omit = ["*/tests/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
